--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,10 @@
             <nav class="nav-menu">
                 <a href="#showcase" class="nav-link">Home</a>
                 <a href="#combined-section" class="nav-link">Things We Do</a>
-                <!--<a href="#" class="nav-link">Statistics</a>-->
                 <a href="#how-this-works" class="nav-link">How This Works</a>
+                <a href="#model-section" class="nav-link">Statistics</a>
                 <a href="#search" class="nav-link">Let's Explore!</a>
             </nav>
-            <div class="hamburger-menu"><i class="fas fa-bars"></i></div>
         </div>
     </div>
 
@@ -84,7 +83,7 @@
     <!-- Section Container Ends -->
 
     <!-- Statistics Section Starts-->
-    <div class="statistics-section">
+    <div class="model-section">
         <h1>Key insights - 3 different ML methods to approach this problem</h1>
         <div class="tabs">
             <button class="tab-links" onclick="openTab(event, 'Model1')">Model 1</button>
@@ -102,7 +101,7 @@
                         We rank the similarity values of each track by a descending order and recommend the top ones to the user.</p>
                 </div>
                 <div class="content-right">
-                    <img src="path/to/your/image1.png" alt="Graph for Model 1">
+                    <img src="/static/img/cosine_flow.png" alt="Graph for Model 1">
                 </div>
             </div>
         </div>
@@ -111,8 +110,10 @@
             <h2>Model 2 - Tracks Clustering</h2>
             <div class="content-flex">
                 <div class="content-left">
-                    <p>We use K-means clustering to group the tracks into different clusters based on their audio features. 
-                        The user's playlist is then compared to the clusters and the tracks in the most similar cluster are recommended to the user.</p>
+                    <p>In recommendation systems, clustering algorithms can be used to group similar items together based on their features. 
+                        In content-based filtering for tracks, we implement this method to group similar tracks together. 
+                        We then assign a cluster number to the input playlist by aggregating its features and recommend tracks from the same cluster.
+                    </p>
                 </div>
                 <div class="content-right">
                     <img src="path/to/your/image2.png" alt="Graph for Model 2">
@@ -124,11 +125,13 @@
             <h2>Model 3 - Playlists Clustering</h2>
             <div class="content-flex">
                 <div class="content-left">
-                    <p>We use K-means clustering to group the playlists into different clusters based on their audio features. 
-                        The user's playlist is then compared to the clusters and the tracks in the most similar cluster are recommended to the user.</p>
+                    <p>In recommendation systems, clustering algorithms can be used to group similar users together based on their preferences and behaviors. 
+                        We assume that the creation of a playlist implies the user's song preferences and grouping behavior. 
+                        By grouping similar playlists together and assigning the input playlist to a cluster, we recommend songs from other similar playlists from the same cluster to the user.
+                    </p>
                 </div>
                 <div class="content-right">
-                    <img src="path/to/your/image3.png" alt="Graph for Model 3">
+                    <img src="/static/img/playlist_clusters_K17_transparent.png" alt="Graph for Model 3">
                 </div>
             </div>
         </div>
@@ -148,7 +151,7 @@
             <i class="fa-solid fa-headphones-simple"></i>
             <div class="inner">
                 <h4>Step 2</h4>
-                <p>Click on the three dots to find Spotify URI under the share tab</p>
+                <p>Click on the three dots</p>
             </div>
         </article>
         <article>
@@ -172,8 +175,8 @@
 
         <!-- Let's Get Your Songs section starts-->
         <section class="search">
-            <h2>Match me Songs!</h2>
-            <form method="post" action="/vector_model_prediction">
+            <h2>Recommend Me Songs!</h2>
+            <form method="post" action="/model_recommendation">
                 <label for="track1">Playlist:</label>
                 <input type="text" id="track1" name="track1" required>
                 <br>
@@ -311,26 +314,26 @@
                         <div class="wrapped-left-column">
                             <h3>Top Artists</h3>
                             <ul>
-                                <li>#1 Trust</li>
-                                <li>#2 Queen</li>
-                                <li>#3 Bon Jovi</li>
-                                <li>#4 Scorpions</li>
-                                <li>#5 Adele</li>
+                                <li>#1 Artic Monkeys</li>
+                                <li>#2 The Smashing Pumpkins</li>
+                                <li>#3 Rachid Taha</li>
+                                <li>#4 Elle King</li>
+                                <li>#5 Chris Janson</li>
                             </ul>
                         </div>
                         <div class="wrapped-right-column">
                             <h3>Top Songs</h3>
                             <ul>
-                                <li>#1 Antisocial</li>
-                                <li>#2 Bohemeian Rhapsody</li>
-                                <li>#3 Snooze</li>
-                                <li>#4 Wind Of Change</li>
-                                <li>#5 Set Fire To The Rain</li>
+                                <li>#1 Do I Wanna Know?</li>
+                                <li>#2 The End Is The Beginning Is The End</li>
+                                <li>#3 Ya Rayah</li>
+                                <li>#4 Ex's & Oh's</li>
+                                <li>#5 Buy Me a Boat</li>
                             </ul>
                         </div>
                     </div>
                     <div class="wrapped-footer">
-                        <span>Top Genre - Rock</span>
+                        <span>Top Genre - Reggaetón</span>
                     </div>
                 </div>
                 <!--Joe-->
@@ -340,21 +343,21 @@
                         <div class="wrapped-left-column">
                             <h3>Top Artists</h3>
                             <ul>
-                                <li>#1 Lady Ga Ga</li>
-                                <li>#2 Katy Perry</li>
-                                <li>#3 OneRepublic</li>
-                                <li>#4 Eminem</li>
+                                <li>#1 Linkin Park</li>
+                                <li>#2 Survivor</li>
+                                <li>#3 Eminem</li>
+                                <li>#4 OneRepublic</li>
                                 <li>#5 Bruno Mars</li>
                             </ul>
                         </div>
                         <div class="wrapped-right-column">
                             <h3>Top Songs</h3>
                             <ul>
-                                <li>#1 Poker Face</li>
-                                <li>#2 Roar</li>
-                                <li>#3 Counting Stars</li>
-                                <li>#4 Without Me</li>
-                                <li>#5 The Lazy Song</li>
+                                <li>#1 Castle of Glass</li>
+                                <li>#2 Eye of the Tiger</li>
+                                <li>#3 Luminous Emptiness</li>
+                                <li>#4 Rap God</li>
+                                <li>#5 Wellerman</li>
                             </ul>
                         </div>
                     </div>
